--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,6 @@ body {
 
 #contain {
     min-width: 465px;
-    margin-left: 16%;
     margin-bottom: 50px;
 }
 
@@ -333,6 +332,7 @@ a:visited {
 #blocks {
     float: left;
     position: static;
+    padding-bottom: 50px;
 }
 
 .block {
